# haskell-comonads

./: README.md  comonads.cabal
src/: Main.hs
test/: test.hs
