name:          haskell-comonads
version:       0.1
author:        Dan Brooks
maintainer:    dmbrooks@live.co.uk
build-type:    Simple
cabal-version: >=1.8

executable comonads
  hs-source-dirs:   src
  main-is:          Main.hs
  build-depends:    base,
                    containers,
                    comonad
  default-language: Haskell2010
  ghc-options:      -Wall -O3

test-suite test
  type:             exitcode-stdio-1.0
  main-Is:          test.hs
  hs-source-dirs:   src, test
  build-depends:    base >= 4.2 && < 5,
                    tasty >= 0.11 && < 0.12,
                    tasty-hunit >= 0.9 && < 0.10
  ghc-options:      -rtsopts -Wall -fno-warn-unused-do-bind -threaded
  default-language: Haskell2010
